# ttPin-RichieVersion

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  MVP_ARCHITECTURE.md  README.md  eslint.config.mjs  package-lock.json  package.json  start-all.bat  tauri-dev.bat  tauri-dev.ps1
apps/admin/: index.html  package.json  tsconfig.json  vite.config.ts
apps/admin/src/: App.tsx  index.css
apps/backend/: package.json  tsconfig.json
apps/backend/src/: index.ts
apps/desktop/: .env.example  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: Settings.tsx  VocabularyPanel.tsx
apps/desktop/src/services/: azureOpenAI.ts  azureTranslator.ts  vocabularyService.ts
docs/: README.md  azure-setup-guide.md
docs/archive/: BROWSER_ACCESS_FIX.md  DAILY_SUMMARY_2026-01-07.md  DEVELOPMENT_TASKS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SERVICES_RUNNING.md  START_GUIDE.md
docs/maintainers/: GITHUB_SETUP.md  PUSH_TO_GITHUB.md  README.md
